gcc/testsuite/gdc.test/compilable/extra-files/test21359a.d
void registerAll() {
    import test21359b;
}
