gcc/testsuite/gdc.test/fail_compilation/failsafea.d

void systemfunc() @system {}

@safe
void callingsystem()
{
    systemfunc();
}
